[metadata]
name = lippukala
version = attr: lippukala.__version__
description = Desuconin ja Traconin e-lippu-jarjestelmä
author = Aarni Koskela
author_email = akx@iki.fi
url = https://github.com/kcsry/paikkala

[options]
packages = find:
python_requires = >=3.6
include_package_data = true
zip_safe = false
install_requires =
    Django>=3.0
    xlwt
    reportlab>=2.6

[options.packages.find]
where = .
exclude = lippukala_test

[pep8]
max-line-length = 120
exclude = *migrations*
ignore = E309

[flake8]
exclude = migrations
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = lippukala_test_app.settings
norecursedirs = .git venv* site-packages
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE

[isort]
atomic=true
combine_as_imports=false
indent=4
known_standard_library=token,tokenize,enum,importlib
known_third_party=django
length_sort=false
line_length=120
multi_line_output=5
not_skip=__init__.py
order_by_type=false
skip=migrations
wrap_length=120
