[metadata]
name = lippukala
version = attr: lippukala.__version__
description = Desuconin ja Traconin e-lippu-jarjestelmä
author = Aarni Koskela
author_email = akx@iki.fi
url = https://github.com/kcsry/paikkala

[options]
packages = find:
python_requires = >=3.6
include_package_data = true
zip_safe = false
install_requires =
    Django>=3.0
    xlwt
    reportlab>=2.6

[options.packages.find]
where = .
exclude = lippukala_test

[flake8]
exclude = migrations
max-line-length = 110
extend-ignore = E203
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = lippukala_test_app.settings
norecursedirs = .git venv* site-packages
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ALLOW_UNICODE

[isort]
profile = black
multi_line_output = 3
